# betweencoffee_delivery_enhance

./: .clinerules  .env.example  .flake8  .gitignore  .gitignore.save  Accordion_修復完成報告.md  Dockerfile  FPS_QRcode_添加完成報告.md  HTTP_403_Forbidden_錯誤修復報告.md  JavaScript代碼優化遷移指南.md  JavaScript代碼質量分析報告.md  LOGGING_SYSTEM_IMPROVEMENT.md  Procfile  __build.sh  _railway.json  analyze_js_dependencies.py  analyze_renderers.py  app_private_key.pem  app_public_key.pem  audit_phase2.js  backup_20250914_182748.sql  backup_before_deploy.json  bc-context  betweencoffee_context.txt  betweencoffee_context_loader.sh  betweencoffee_delivery_db_backup_20250126_6pm.backup  betweencoffee_delivery_db_backup_20260214_7pm.backup  calls_to_migrate.txt  celery.py  celery.py.old  check_config.py  check_data_consistency.py  check_deployment_status.sh  check_missing_views.py  check_order_127.py  check_production_readiness.py  check_queue_status.py  check_remaining_issues.py  cleanup_project.sh  cleanup_queue_data.py  (+185 more)
.clinerules/: .clinerules  ui-principles.md
betweencoffee_delivery/: __init__.py  asgi.py  asgi_fixed.py  cache_config.py  celery_app.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
betweencoffee_memory_bank/: 00_PROJECT_OVERVIEW.md  demo_usage.py
cart/: _forms.py  cart.py  context_processors.py  urls.py  views.py
core/: api_response.py  error_handling.py
eshop/: __init__.py  _test_twilio.py  _time_estimator.py  _time_utils.py  _websocket_consumer.py  _websocket_monitor.py  _websocket_utils.py  admin.py  alipay_utils.py  api_utils.py  cache_manager.py  consumers.py  (+43 more)
(+427 files in other folders)
